--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,9 @@ set(CMAKE_COLOR_MAKEFILE OFF)
 set(CMAKE_POSITION_INDEPENDENT_CODE OFF)
 set(CMAKE_C_STANDARD 99)
 set(CMAKE_CXX_STANDARD 11)
+
+set(ARCH AMD64 CACHE INTERNAL arch)
+
 #set_property(GLOBAL PROPERTY RULE_MESSAGES OFF)
 
 # check that the ARCH (target architecture) variable is defined
